@@ -79,7 +79,7 @@ class Spline(Component):
         self.dz = Parameters(name="dz - spline")
         for i, z in enumerate(dz):
             p = possibly_create_parameter(
-                z, name="%s - spline dz[%d]" % (name, i)
+                z, name=f"{name} - spline dz[{i}]"
             )
             p.range(0.0000001, 1)
             self.dz.append(p)
@@ -87,7 +87,7 @@ class Spline(Component):
         self.vs = Parameters(name="vs - spline")
         for i, v in enumerate(vs):
             p = possibly_create_parameter(
-                v, name="%s - spline vs[%d]" % (name, i), units="10**-6 Å**-2"
+                v, name=f"{name} - spline vs[{i}]", units="10**-6 Å**-2"
             )
             self.vs.append(p)
 
