@@ -441,3 +441,4 @@ in 0.1.13.
   little faster.
 - Ported the pymc wrapper from pymc3 --> pymc (v4), which was released in
   Jun2022.
+- added sequence_to_parameters function.
